# cuRT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.sh
patches/: CMakeLists.txt  CMakeLists_imgui.txt  assimp_improve_obj.patch  imgui_change_gl_loader.patch
src/: App.cpp  App.hpp  BVHBuilder.cpp  BVHBuilder.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CudaRenderer.cu  CudaRenderer.hpp  GLCanvas.cpp  GLCanvas.hpp  GLContext.cpp  GLContext.hpp  GLDrawable.cpp  GLDrawable.hpp  GLLight.cpp  GLLight.hpp  GLModel.cpp  GLModel.hpp  GLShader.cpp  GLShader.hpp  GLShadowMap.cpp  GLShadowMap.hpp  GLTexture.cpp  GLTexture.hpp  ISPCRenderer.cpp  ISPCRenderer.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Triangle.hpp  UI.cpp  UI.hpp  Utils.cpp  Utils.hpp  main.cpp
src/shaders/canvas/: fshader.glsl  vshader.glsl
src/shaders/depth/: fshader.glsl  vshader.glsl
src/shaders/light/: fshader.glsl  vshader.glsl
src/shaders/line/: fshader.glsl  vshader.glsl
src/shaders/model/: fshader.glsl  vshader.glsl
src/shaders/text/: fshader.glsl  vshader.glsl
src/shaders/tri/: fshader.glsl  vshader.glsl
